change import path

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 language: go
-go_import_path: github.com/colinmarc/hdfs
+go_import_path: github.com/xtrimf/hdfs
 go: 1.x
 env:
 - PLATFORM=hdp2
